--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/ziqilu.jpg">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/dongli.png">
             </td>
           </tr>
         </table>
