--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,11 +66,11 @@
           </tr>
         </table>
 
-        <!-- Selected Publications-->
+        <!-- Publications-->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Selected Publications</h2>
+              <h2>Publications</h2>
             </td>
           </tr>
         </table>
