--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,8 @@
                 <a target="_blank" href="mailto:lidong8421bcd@gmail.com"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/DoongLi">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://DoongLi.github.io">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/dong-li-9796b2245/"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/dong-li-9796b2245/"> LinkedIn </a> &nbsp;/&nbsp;
+                <a href="https://github.com/DoongLi/DoongLi.github.io/blob/main/doc/dongli_resume.pdf"> CV </a> 
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
