--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -150,10 +150,10 @@
               {{post.venue}}
               <br>
               {% if post.document %}
-              <a href="{{post.paper}}">paper</a> /
+              <a href="{{post.document}}">Document</a> /
               {% endif %}
               {% if post.github-repo %}
-              <a href="{{post.arxiv}}">Github Repository</a> /
+              <a href="{{post.github-repo}}">Github Repository</a> /
               {% endif %}
               {% if post.video %}
               <a href="{{post.video}}">video</a> /
