--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@
               <a href="{{post.document}}">Document</a> /
               {% endif %}
               {% if post.github_repo %}
-              <a href="{{post.github_repo}}">Github Repository</a> /
+              <a href="{{post.github}}">Github</a> /
               {% endif %}
               <p></p>
               {{ post.excerpt }}
@@ -161,7 +161,7 @@
               <a href="{{post.document}}">Document</a> /
               {% endif %}
               {% if post.github_repo %}
-              <a href="{{post.github_repo}}">Github Repository</a> /
+              <a href="{{post.github}}">Github</a> /
               {% endif %}
               <p></p>
               {{ post.excerpt }}
