--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,10 @@
               <p>
                 I'm broadly interested in <strong>the overlap between robotics and computer vision</strong>, specifically, my research focuses the on use of Deep learning to solve the real problems of Robotics applications.   
               </p>
+              <p>
+                When I was studying at <a href="http://www.fyssz.net/">Fuyang No.3 High School</a>, I was sponsored as a Pearl Student by the <a href="https://en.xhef.org/">Xin Hua Education Foundation (XHEF)</a>. I am extremely grateful to them!
+              </p>
+              
               <p style="text-align:center">
                 <a target="_blank" href="mailto:lidong8421bcd@gmail.com"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/DoongLi">GitHub</a> &nbsp;/&nbsp;
