--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
                 <a href="https://github.com/DoongLi">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://DoongLi.github.io">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/dong-li-9796b2245/"> LinkedIn </a> &nbsp;/&nbsp;
-                <a href="https://github.com/DoongLi/DoongLi.github.io/blob/main/doc/dongli_resume.pdf"> CV </a> 
+                <a href="doc/dongli_resume.pdf"> CV </a> 
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
