--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,6 @@
               Before that, I received the B. Eng. degree from the <a href="http://ci.hfut.edu.cn/">School of Computer and Information Engineering</a>, <a href="http://www.hfut.edu.cn/">Hefei University of Technology</a> in June 2022. During my undergraduate years, I was a founder of the robotics team of the Hefei University of Technology and participated in <a href="https://www.robomaster.com/en-US">RoboMaster Robotics Competition</a>, from 2019 to 2021. I worked as a Research Assistant for one year from June 2022 to June 2023, in the Autonomous and Multi-Agent Systems Research Lab (AMAS-Lab) at <a href="https://eee.sustech.edu.cn/?lang=en">the Department of Electronic and Electrical Engineering</a> of <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology (SUSTech)</a>, supervised by Prof. <a href="https://scholar.google.com/citations?user=ic9y2dIAAAAJ&hl=zh-CN&oi=ao">Zhiyun Lin</a>.
               </p>
               <p>
-                I'm broadly interested in <strong>the overlap between robotics and computer vision</strong>, specifically, my research focuses the on use of Deep learning to solve the real problems of Robotics applications.   
-              </p>
-              <p>
                 When I was studying at <a href="http://www.fyssz.net/">Fuyang No.3 High School</a>, I was sponsored as a Pearl Student by the <a href="https://en.xhef.org/">Xin Hua Education Foundation (XHEF)</a>. I am extremely grateful to them!
               </p>
               
@@ -54,7 +51,21 @@
             </td>
           </tr>
         </table>
+        
+        <!-- Research -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <h2>Research</h2>
+              <p>
+                I'm broadly interested in <strong>the overlap between robotics and computer vision</strong>, specifically, my research focuses the on use of Deep learning to solve the real problems of Robotics applications.   
+              </p>
 
+            </td>
+          </tr>
+        </table>
+
+        
         <!-- Personal News -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
