--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,8 @@
                 <a href="https://DoongLi.github.io">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/dong-li-9796b2245/"> LinkedIn </a> &nbsp;/&nbsp;
                 <a href="doc/dongli_resume.pdf"> CV </a> 
+                <a href="images/wechat.jpg"> WeChat </a> 
+                
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
