--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
                 <a href="https://github.com/DoongLi">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://DoongLi.github.io">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/dong-li-9796b2245/"> LinkedIn </a> &nbsp;/&nbsp;
-                <a href="doc/dongli_resume.pdf"> CV </a> 
+                <a href="doc/dongli_resume.pdf"> CV </a> &nbsp;/&nbsp;
                 <a href="images/wechat.jpg"> WeChat </a> 
                 
               </p>
