--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,6 +74,8 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                [Jun 2024]&nbsp;&nbsp;<strong>UMAD</strong> has been accepted by IROS 2024! Thanks to everyone who participated in this project!
+              </p>
               	[Mar 2024]&nbsp;&nbsp;We submitted the <strong>UMAD</strong> dataset to IROS 2024!
               </p>
               <p>
