--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
               <p style="text-align:center">
                 <a target="_blank" href="mailto:lidong8421bcd@gmail.com"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/DoongLi">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://DoongLi.github.io">Google Scholar</a> &nbsp;/&nbsp;
+                <a href="https://scholar.google.com/citations?user=NlsqUHcAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/dong-li-9796b2245/"> LinkedIn </a> &nbsp;/&nbsp;
                 <a href="doc/dongli_resume.pdf"> CV </a> &nbsp;/&nbsp;
                 <a href="images/wechat.jpg"> WeChat </a> 
