--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,20 @@
               <h1>
                 Frankie Dong Li
               </h1>
+              <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>Highlighted Text</title>
+                <style>
+                  .highlight {
+                    color: red;
+                    font-weight: bold;
+                  }
+                </style>
+              </head>
+              <body>
+                <p class="highlight">I am looking for a PhD position in perception-aware navigation, 3D geometry, and reconstruction. Feel free to contact me if you or anyone is hiring.</p>
+              </body>
               <p>
                 I was a Research Assistant from <a href="https://sites.google.com/view/huikonglab/home">The Intelligent Machine Research Lab (IMRL)</a> in the <a href="https://skliotsc.um.edu.mo/"> SKL-IOTSC </a> at <a href="https://www.um.edu.mo/">the University of Macau</a>, supervised by Prof. <a href="https://www.fst.um.edu.mo/people/huikong/">Hui Kong</a>.
               </p>
