--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,9 +88,10 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                [Jun 2024]&nbsp;&nbsp;<strong>UMAD</strong> has been accepted by IROS 2024! Thanks to everyone who participated in this project!
+              	[Nov 2024]&nbsp;&nbsp;The star count of our <a href="https://github.com/DoongLi/awesome-Implicit-NeRF-SLAM">awesome-Implicit-NeRF-SLAM</a> repository has reached 1K！
               </p>
-              	[Mar 2024]&nbsp;&nbsp;We submitted the <strong>UMAD</strong> dataset to IROS 2024!
+              <p>
+                [Jun 2024]&nbsp;&nbsp;<strong>UMAD</strong> has been accepted by IROS 2024! Thanks to everyone who participated in this project!
               </p>
               <p>
                 [Mar 2024]&nbsp;&nbsp;A new personal website has been created.
