--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
               	[Nov 2024]&nbsp;&nbsp;The star count of our <a href="https://github.com/DoongLi/awesome-Implicit-NeRF-SLAM">awesome-Implicit-NeRF-SLAM</a> repository has reached 1K！
               </p>
               <p>
-                [Jun 2024]&nbsp;&nbsp;<strong>UMAD</strong> has been accepted by IROS 2024! Thanks to everyone who participated in this project!
+                [Jun 2024]&nbsp;&nbsp;<strong><a href="https://arxiv.org/pdf/2408.12527">UMAD</a></strong> has been accepted by IROS 2024! Thanks to everyone who participated in this project!
               </p>
               <p>
                 [Mar 2024]&nbsp;&nbsp;A new personal website has been created.
