--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -348,7 +348,42 @@
           {% endfor %}
           {% endfor %}
         </table> -->
+        <!-- Honors & Awards -->
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <tr>
+    <td style="padding:2.5%;width:100%;vertical-align:middle">
+      <h2>Honors & Awards</h2>
+      <ul>
+        <li><strong>Best in Class</strong> | RoboCup Rescue - Dexterity, Bordeaux, France, 7/2023</li>
+        <li><strong>Second Prize</strong> | China Robot Competition for Robot Rescue, 6/2023</li>
+        <li><strong>Second Prize</strong> | RoboCup Rescue - Exploration and Mapping Scenario, 07/2022</li>
+        <li><strong>Best in Class</strong> | RoboCup Rescue - Search and Inspect, 07/2022</li>
+        <li><strong>Outstanding Graduate and Excellent Graduation Projects</strong> | Southwest Petroleum University, 06/2021</li>
+        <li><strong>Yongyi Scholarship</strong> | First Prize, 10/2020</li>
+        <li><strong>Principal Scholarship</strong> | First Prize, Sichuan, 12/2019</li>
+        <li><strong>Grand Prize</strong> | National Educational Robotics Competition, Guangxi, 11/2018</li>
+        <li><strong>Third Prize</strong> | National Undergraduate Intelligence Vehicle Competition, 12/2017</li>
+        <li><strong>Third Prize</strong> | National Undergraduate Electronic Design Contest (Sichuan Region), Chengdu, 06/2018</li>
+        <li><strong>Second Prize</strong> | National Engineering Robotics Competition, Guangdong, 04/2019</li>
+        <li><strong>National Scholarship</strong> | [Ranked top 0.5%], 2018</li>
+      </ul>
+    </td>
+  </tr>
+</table>
 
+<!-- Services -->
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <tr>
+    <td style="padding:2.5%;width:100%;vertical-align:middle">
+      <h2>Services</h2>
+      <ul>
+        <li>Reviewer | IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2024</li>
+        <li>Reviewer | IEEE Robotics and Automation Letters</li>
+      </ul>
+    </td>
+  </tr>
+</table>
+        
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:0px">
