--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -354,18 +354,11 @@
     <td style="padding:2.5%;width:100%;vertical-align:middle">
       <h2>Honors & Awards</h2>
       <ul>
-        <li><strong>Best in Class</strong> | RoboCup Rescue - Dexterity, Bordeaux, France, 7/2023</li>
-        <li><strong>Second Prize</strong> | China Robot Competition for Robot Rescue, 6/2023</li>
-        <li><strong>Second Prize</strong> | RoboCup Rescue - Exploration and Mapping Scenario, 07/2022</li>
-        <li><strong>Best in Class</strong> | RoboCup Rescue - Search and Inspect, 07/2022</li>
-        <li><strong>Outstanding Graduate and Excellent Graduation Projects</strong> | Southwest Petroleum University, 06/2021</li>
-        <li><strong>Yongyi Scholarship</strong> | First Prize, 10/2020</li>
-        <li><strong>Principal Scholarship</strong> | First Prize, Sichuan, 12/2019</li>
-        <li><strong>Grand Prize</strong> | National Educational Robotics Competition, Guangxi, 11/2018</li>
-        <li><strong>Third Prize</strong> | National Undergraduate Intelligence Vehicle Competition, 12/2017</li>
-        <li><strong>Third Prize</strong> | National Undergraduate Electronic Design Contest (Sichuan Region), Chengdu, 06/2018</li>
-        <li><strong>Second Prize</strong> | National Engineering Robotics Competition, Guangdong, 04/2019</li>
-        <li><strong>National Scholarship</strong> | [Ranked top 0.5%], 2018</li>
+        <li><strong>Third Prize</strong> | International Underwater Robot Competition, 2020</li>
+        <li><strong>First Prize</strong> | National Undergraduate Electronics Design Contest in Anhui Province, 2020</li>
+        <li><strong>Second Prize</strong> | RoboMaster Robotics Competition, 2020</li>
+        <li><strong>Third Prize</strong> | National University Student Social Practice and Science Contest on Energy Saving & Emission Reduction, 2020</li>
+        <li><strong>Individual Scholarship</strong> | Hefei University of Technology, 2019, 2020, 2021</li>
       </ul>
     </td>
   </tr>
@@ -377,8 +370,8 @@
     <td style="padding:2.5%;width:100%;vertical-align:middle">
       <h2>Services</h2>
       <ul>
-        <li>Reviewer | IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2024</li>
-        <li>Reviewer | IEEE Robotics and Automation Letters</li>
+        <li>Reviewer | IEEE International Conference on Robotics and Automation (ICRA) 2025</li>
+        <li>Reviewer | TODO</li>
       </ul>
     </td>
   </tr>
