--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -161,17 +161,17 @@
         <br>
 
         <!-- Services -->
-<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-  <tr>
-    <td style="padding:2.5%;width:100%;vertical-align:middle">
-      <h2>Services</h2>
-      <ul>
-        <li>Reviewer | IEEE International Conference on Robotics and Automation (ICRA) 2025</li>
-        <li>Reviewer | TODO</li>
-      </ul>
-    </td>
-  </tr>
-</table>
+<section style="margin: 0 auto; max-width: 800px;">
+  <h2>Services</h2>
+  <h3>Conference Reviewers</h3>
+  <ul>
+    <li>IEEE International Conference on Robotics and Automation (ICRA) 2025</li>
+  </ul>
+  <h3>Journal Reviewers</h3>
+  <ul>
+    <li>TODO</li>
+  </ul>
+</section>
         
         <!-- Projects-->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
