--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -160,9 +160,14 @@
         <br>
         <br>
 
-        <!-- Services -->
+<!-- Services -->
+
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+<tr>
+<td style="padding:2.5%;width:100%;vertical-align:middle">
 <section style="margin: 0 auto; max-width: 800px;">
   <h2>Services</h2>
+  <ul>
   <h3>Conference Reviewers</h3>
   <ul>
     <li>IEEE International Conference on Robotics and Automation (ICRA) 2025</li>
