--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,7 +125,7 @@
               {{post.authors}}
 
               <br>
-              <em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}
+              <!--<em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}-->
               <br>
               {% if post.paper %}
               <a href="{{post.paper}}">paper</a> /
@@ -160,23 +160,22 @@
         <br>
         <br>
 
-<!-- Services -->
-
-<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-<tr>
-<td style="padding:2.5%;width:100%;vertical-align:middle">
-<section style="margin: 0 auto; max-width: 800px;">
-  <h2>Services</h2>
-  <ul>
-  <h3>Conference Reviewers</h3>
-  <ul>
-    <li>IEEE International Conference on Robotics and Automation (ICRA) 2025</li>
-  </ul>
-  <h3>Journal Reviewers</h3>
-  <ul>
-    <li>TODO</li>
-  </ul>
-</section>
+        <!-- Services -->
+        <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin: 0 auto;">
+  <tr>
+    <td style="padding:2.5%; width:100%; vertical-align:middle">
+      <h2>Services</h2>
+      <h3>Conference Reviewers</h3>
+      <ul>
+        <li>IEEE International Conference on Robotics and Automation (ICRA) 2025</li>
+      </ul>
+      <h3>Journal Reviewers</h3>
+      <ul>
+        <li>TODO</li>
+      </ul>
+    </td>
+  </tr>
+</table>
         
         <!-- Projects-->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
