--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,6 +126,7 @@
 
               <br>
               <!--<em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}-->
+              <em>{{post.venue}}</em>}
               <br>
               {% if post.paper %}
               <a href="{{post.paper}}">paper</a> /
@@ -165,6 +166,7 @@
   <tr>
     <td style="padding:2.5%; width:100%; vertical-align:middle">
       <h2>Services</h2>
+      <ul>
       <h3>Conference Reviewers</h3>
       <ul>
         <li>IEEE International Conference on Robotics and Automation (ICRA) 2025</li>
