--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
 
               <br>
               <!--<em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}-->
-              <em>{{post.venue}}</em>}
+              <em>{{post.venue}}</em>
               <br>
               {% if post.paper %}
               <a href="{{post.paper}}">paper</a> /
