--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,8 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm broadly interested in <strong>the overlap between robotics and computer vision</strong>, specifically, my research focuses the on use of Deep learning to solve the real problems of Robotics applications.   
+                I'm broadly interested in <strong>the overlap between robotics and computer vision</strong>, specifically, my research focuses the on use of Deep learning to solve the real problems of Robotics applications. 
+                My current work centers on enabling robots to construct high-precision multimodal semantic maps efficiently. I believe this will establish a strong foundational framework for visual-language navigation tasks.
               </p>
 
             </td>
@@ -91,7 +92,10 @@
               	[Nov 2024]&nbsp;&nbsp;The star count of our <a href="https://github.com/DoongLi/awesome-Implicit-NeRF-SLAM">awesome-Implicit-NeRF-SLAM</a> repository has reached 1K！
               </p>
               <p>
-                [Jun 2024]&nbsp;&nbsp;<strong><a href="https://arxiv.org/pdf/2408.12527">UMAD</a></strong> has been accepted by IROS 2024! Thanks to everyone who participated in this project!
+              	[Oct 2024]&nbsp;&nbsp;I was invited to review for <a href="https://2025.ieee-icra.org/">ICRA 2025</a> and thank the two AEs for the assignment.
+              </p>
+              <p>
+                [Jun 2024]&nbsp;&nbsp;<strong><a href="https://arxiv.org/pdf/2408.12527">UMAD</a></strong> has been accepted by <a href="http://iros2024-abudhabi.org/">IROS 2024</a>! Thanks to everyone who participated in this project!
               </p>
               <p>
                 [Mar 2024]&nbsp;&nbsp;A new personal website has been created.
