--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
               	[Nov 2024]&nbsp;&nbsp;The star count of our <a href="https://github.com/DoongLi/awesome-Implicit-NeRF-SLAM">awesome-Implicit-NeRF-SLAM</a> repository has reached 1K！
               </p>
               <p>
-              	[Oct 2024]&nbsp;&nbsp;I was invited to review for <a href="https://2025.ieee-icra.org/">ICRA 2025</a> and thank the two AEs for the assignment.
+              	[Oct 2024]&nbsp;&nbsp;I was invited to be a reviewer for <a href="https://2025.ieee-icra.org/">ICRA 2025</a> and thank the two AEs for the assignment.
               </p>
               <p>
                 [Jun 2024]&nbsp;&nbsp;<strong><a href="https://arxiv.org/pdf/2408.12527">UMAD</a></strong> has been accepted by <a href="http://iros2024-abudhabi.org/">IROS 2024</a>! Thanks to everyone who participated in this project!
