--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -378,11 +378,11 @@
       <ul>
       <h3>Conference Reviewers</h3>
       <ul>
-        <li>IEEE International Conference on Robotics and Automation (ICRA) 2025</li>
+        <li><i>IEEE International Conference on Robotics and Automation (ICRA) 2025</i> * 2</li>
       </ul>
       <h3>Journal Reviewers</h3>
       <ul>
-        <li>TODO</li>
+        <li><i>IEEE Robotics and Automation Practice</i> * 1</li>
       </ul>
     </td>
   </tr>
