--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,6 +89,9 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                [Jan 2025]&nbsp;&nbsp;The co-author work GARAD-SLAM has been accepted by <a href="https://2025.ieee-icra.org/">ICRA 2025</a>.
+              </p>
+              <p>
               	[Nov 2024]&nbsp;&nbsp;The star count of our <a href="https://github.com/DoongLi/awesome-Implicit-NeRF-SLAM">awesome-Implicit-NeRF-SLAM</a> repository has reached 1K！
               </p>
               <p>
