--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -153,7 +153,7 @@
               <a href="{{post.slides}}">slides</a> /
               {% endif %}
               {% if post.comments %}
-              <a href="{{post.comments}}">Review Comments</a> /
+              <a href="{{post.comments}}">review comments</a> /
               {% endif %}
               <p></p>
               {{ post.excerpt }}
