--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -155,6 +155,9 @@
               {% if post.comments %}
               <a href="{{post.comments}}">review comments</a> /
               {% endif %}
+              {% if post.rap %}
+              <a href="{{post.rap}}">RA-P editorial rejection comments</a> /
+              {% endif %}
               <p></p>
               {{ post.excerpt }}
             </td>
