--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -388,6 +388,7 @@
       <h3>Journal Reviewers</h3>
       <ul>
         <li><i>IEEE Robotics and Automation Practice</i> * 1</li>
+        <li><i>Scientific Reports</i> * 1</li>
       </ul>
     </td>
   </tr>
