--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
               </p>
               
               <p style="text-align:center">
-                <a target="_blank" href="mailto:lidong8421bcd@gmail.com"> Email</a> &nbsp;/&nbsp;
+                <a target="_blank" href="mailto:doongli@ieee.org"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/DoongLi">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=NlsqUHcAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/dong-li-9796b2245/"> LinkedIn </a> &nbsp;/&nbsp;
