--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -386,6 +386,7 @@
       <h3>Conference Reviewers</h3>
       <ul>
         <li><i>IEEE International Conference on Robotics and Automation (ICRA) 2025</i> * 2</li>
+        <li><i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2025</i> * 1</li>
       </ul>
       <h3>Journal Reviewers</h3>
       <ul>
