--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -387,10 +387,11 @@
       <ul>
         <li><i>IEEE International Conference on Robotics and Automation (ICRA) 2025</i> * 2</li>
         <li><i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2025</i> * 1</li>
+        <li><i>IEEE International Conference on Robot and Human Interactive Communication (ROMAN) 2025</i> * 1</li>
       </ul>
       <h3>Journal Reviewers</h3>
       <ul>
-        <li><i>IEEE Robotics and Automation Practice</i> * 1</li>
+        <li><i>IEEE Robotics and Automation Practice (RA-P)</i> * 1</li>
         <li><i>Scientific Reports</i> * 1</li>
       </ul>
     </td>
