--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -160,6 +160,9 @@
               {% if post.rap %}
               <a href="{{post.rap}}">RA-P editorial rejection comments</a> /
               {% endif %}
+              {% if post.coverletter %}
+              <a href="{{post.coverletter}}">review comments and cover letter</a> /
+              {% endif %}
               <p></p>
               {{ post.excerpt }}
             </td>
