--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,6 +91,9 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                [Apr 2025]&nbsp;&nbsp;Our collaborative work on monocular 3D GS SLAM has been accepted by Sensors Journal 2025. You can find the paper, review comments, and response letter below.
+              </p>
+              <p>
                 [Jan 2025]&nbsp;&nbsp;The co-author work <strong><a href="https://arxiv.org/pdf/2502.03228">GARAD-SLAM</a></strong> has been accepted by <a href="https://2025.ieee-icra.org/">ICRA 2025</a>.
               </p>
               <p>
