--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,10 +91,13 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                [Apr 2025]&nbsp;&nbsp;Our collaborative work on monocular 3D GS SLAM has been accepted by Sensors Journal 2025. You can find the paper, review comments, and response letter below.
+                [Apr 2025]&nbsp;&nbsp;The co-author work <strong><a href="https://ieeexplore.ieee.org/abstract/document/10994228/">DSOSplat</a></strong> has been accepted by <strong><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361">Sensors Journal</a></strong>.
               </p>
               <p>
                 [Jan 2025]&nbsp;&nbsp;The co-author work <strong><a href="https://arxiv.org/pdf/2502.03228">GARAD-SLAM</a></strong> has been accepted by <a href="https://2025.ieee-icra.org/">ICRA 2025</a>.
+              </p>
+              <p>
+                [Jan 2025]&nbsp;&nbsp;The co-author work on Agricultural Robots was rejected by <a href="https://www.ieee-ras.org/publications/ra-p">RA-P</a> Editorial.
               </p>
               <p>
               	[Nov 2024]&nbsp;&nbsp;The star count of our <a href="https://github.com/DoongLi/awesome-Implicit-NeRF-SLAM">awesome-Implicit-NeRF-SLAM</a> repository has reached 1K！
