--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,6 +91,9 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                [Jun 2025]&nbsp;&nbsp;TWC-SLAM and STG-Avatar have been accepted by <a href="https://www.iros25.org/">IROS 2025</a>~
+              </p>
+              <p>
                 [Apr 2025]&nbsp;&nbsp;The co-author work <strong><a href="https://ieeexplore.ieee.org/abstract/document/10994228/">DSOSplat</a></strong> has been accepted by <strong><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361">Sensors Journal</a></strong>.
               </p>
               <p>
