--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,10 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>News</h2>
+              <h2>News</h2>\
+              <p>
+                [Jul 2025]&nbsp;&nbsp;SLAM-X and Wild3A have been accepted by <a href="https://acmmm2025.org/">ACM MM 2025</a>!
+              </p>
               <p>
                 [Jun 2025]&nbsp;&nbsp;TWC-SLAM and STG-Avatar have been accepted by <a href="https://www.iros25.org/">IROS 2025</a>~
               </p>
