--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,10 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                [Jul 2025]&nbsp;&nbsp;SLAM-X and Wild3A have been accepted by <a href="https://acmmm2025.org/">ACM MM 2025</a>!
+                [Sep 2025]&nbsp;&nbsp;The co-author work <strong>GaussR-SLAM</strong> has been accepted by <strong>RAL</strong>~
+              </p>
+              <p>
+                [Jul 2025]&nbsp;&nbsp;<strong>SLAM-X</strong> and <strong>Wild3A</strong> have been accepted by <a href="https://acmmm2025.org/">ACM MM 2025</a>!
               </p>
               <p>
                 [Jun 2025]&nbsp;&nbsp;TWC-SLAM and STG-Avatar have been accepted by <a href="https://www.iros25.org/">IROS 2025</a>~
