--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                [Sep 2025]&nbsp;&nbsp;The co-author work <strong>GaussR-SLAM</strong> has been accepted by <strong>RAL</strong>~
+                [Sep 2025]&nbsp;&nbsp;The co-author work <a href="https://ieeexplore.ieee.org/document/11164563">GaussR-SLAM</a> has been accepted by <strong>RAL</strong>~
               </p>
               <p>
                 [Jul 2025]&nbsp;&nbsp;<strong>SLAM-X</strong> and <strong>Wild3A</strong> have been accepted by <a href="https://acmmm2025.org/">ACM MM 2025</a>!
