--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,6 +94,9 @@
                 [Sep 2025]&nbsp;&nbsp;The co-author work <a href="https://ieeexplore.ieee.org/document/11164563">GaussR-SLAM</a> has been accepted by <strong>RAL</strong>~
               </p>
               <p>
+                [Aug 2025]&nbsp;&nbsp;Our work on autonomous exploration <strong>GuangMing-Explorer</strong> was accepted by <a href="https://icus.c2.org.cn/Submission/">ICUS 2025</a>. I completed all experiments for this work.
+              </p>
+              <p>
                 [Jul 2025]&nbsp;&nbsp;<strong>SLAM-X</strong> and <strong>Wild3A</strong> have been accepted by <a href="https://acmmm2025.org/">ACM MM 2025</a>!
               </p>
               <p>
