--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm broadly interested in <strong>the overlap between robotics and computer vision</strong>, specifically, my research focuses the on use of Deep learning to solve the real problems of Robotics applications. 
+                I'm broadly interested in <strong>the overlap between robotics and computer vision</strong>, specifically, my research focuses on the use of Deep learning to solve the real problems of Robotics applications. 
                 My current work centers on enabling robots to construct high-precision multimodal semantic maps efficiently. I believe this will establish a strong foundational framework for visual-language navigation tasks.
               </p>
 
@@ -90,6 +90,9 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
+              <p>
+                [Sep 2025]&nbsp;&nbsp; The 4WS-4WD Agricultural Robots paper has been accepted by <a href="https://www.robio2025.org/">ROBIO 2025</a>. Congrats, Lebin!
+              </p>
               <p>
                 [Sep 2025]&nbsp;&nbsp;The co-author work <a href="https://ieeexplore.ieee.org/document/11164563">GaussR-SLAM</a> has been accepted by <strong>RAL</strong>~
               </p>
