--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -409,6 +409,8 @@
       <ul>
       <h3>Conference Reviewers</h3>
       <ul>
+        <li><i>AAAI-26 Student Abstract and Poster Program Committee Member
+        <li><i>IEEE International Conference on Robotics and Automation (ICRA) 2026</i> * 3</li>
         <li><i>IEEE International Conference on Robotics and Automation (ICRA) 2025</i> * 2</li>
         <li><i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2025</i> * 2</li>
         <li><i>IEEE International Conference on Robot and Human Interactive Communication (ROMAN) 2025</i> * 1</li>
