--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                [Dec 2025]&nbsp;&nbsp; Our survey on 3D Scene Representation is now available on <a href="https://arxiv.org/pdf/2512.03422">arXiv</a>.
+                [Dec 2025]&nbsp;&nbsp; Our survey on 3D Scene Representation is available on <a href="https://arxiv.org/pdf/2512.03422">arXiv</a>.
               </p>
                 [Sep 2025]&nbsp;&nbsp; The 4WS-4WD Agricultural Robots paper has been accepted by <a href="https://www.robio2025.org/">ROBIO 2025</a>. Congrats, Lebin!
               </p>
