--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -419,6 +419,7 @@
       </ul>
       <h3>Journal Reviewers</h3>
       <ul>
+        <li><i>IEEE Robotics and Automation Letters (RAL)</i> * 1</li>
         <li><i>IEEE Robotics and Automation Practice (RA-P)</i> * 1</li>
         <li><i>Scientific Reports</i> * 1</li>
       </ul>
