--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,10 @@
               <p>
                 [Dec 2025]&nbsp;&nbsp; Our survey on 3D Scene Representation is available on <a href="https://arxiv.org/pdf/2512.03422">arXiv</a>.
               </p>
+              <p>
+              	[Oct 2025]&nbsp;&nbsp;I will travel to Hangzhou, China to attend <a href="https://www.iros25.org/">IROS 2025</a>.
+              </p>
+              <p>
                 [Sep 2025]&nbsp;&nbsp; The 4WS-4WD Agricultural Robots paper has been accepted by <a href="https://www.robio2025.org/">ROBIO 2025</a>. Congrats, Lebin!
               </p>
               <p>
@@ -118,6 +122,9 @@
               </p>
               <p>
               	[Nov 2024]&nbsp;&nbsp;The star count of our <a href="https://github.com/DoongLi/awesome-Implicit-NeRF-SLAM">awesome-Implicit-NeRF-SLAM</a> repository has reached 1K！
+              </p>
+              <p>
+              	[Oct 2024]&nbsp;&nbsp;I have received the RAS travel grant and will travel to Abu Dhabi, UAE to attend <a href="http://iros2024-abudhabi.org/">IROS 2024</a>.
               </p>
               <p>
               	[Oct 2024]&nbsp;&nbsp;I was invited to be a reviewer for <a href="https://2025.ieee-icra.org/">ICRA 2025</a> and thank the two AEs for the assignment.
