--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -426,6 +426,7 @@
         <li><i>Transactions on Automation Science and Engineering (TASE)</i> * 1</li>
         <li><i>IEEE Robotics and Automation Letters (RAL)</i> * 1</li>
         <li><i>IEEE Robotics and Automation Practice (RA-P)</i> * 1</li>
+        <li><i>Neurocomputing</i> * 1</li>
         <li><i>Scientific Reports</i> * 1</li>
       </ul>
     </td>
