--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,11 +43,12 @@
                     <!--
                 <p class="highlight">I am looking for a PhD position in perception-aware navigation, 3D geometry, and reconstruction. Feel free to contact me if you or anyone is hiring.</p>
                     -->
-              </body>
+              </body> https://people.ucas.ac.cn/~longchen
               <p>
-                I was a Research Assistant from <a href="https://sites.google.com/view/huikonglab/home">The Intelligent Machine Research Lab (IMRL)</a> in the <a href="https://skliotsc.um.edu.mo/"> SKL-IOTSC </a> at <a href="https://www.um.edu.mo/">the University of Macau</a>, supervised by Prof. <a href="https://www.fst.um.edu.mo/people/huikong/">Hui Kong</a>.
+                I am currently a graduate student at Macau University of Science and Technology (MUST) and the Institute of Automation, Chinese Academy of Sciences (CASIA), supervised by <a href="https://people.ucas.ac.cn/~longchen">Prof.Long Chen</a>, working on Space Robotics.
               </p>
               <p>
+              I was a Research Assistant from <a href="https://sites.google.com/view/huikonglab/home">The Intelligent Machine Research Lab (IMRL)</a> in the <a href="https://skliotsc.um.edu.mo/"> SKL-IOTSC </a> at <a href="https://www.um.edu.mo/">the University of Macau</a>, supervised by Prof. <a href="https://www.fst.um.edu.mo/people/huikong/">Hui Kong</a>.
               Before that, I received the B. Eng. degree from the <a href="http://ci.hfut.edu.cn/">School of Computer and Information Engineering</a>, <a href="http://www.hfut.edu.cn/">Hefei University of Technology</a> in June 2022. During my undergraduate years, I was a founders of the robotics team of the Hefei University of Technology and participated in <a href="https://www.robomaster.com/en-US">RoboMaster Robotics Competition</a>, from 2019 to 2021. I worked as a Research Assistant for one year from June 2022 to June 2023, in the Autonomous and Multi-Agent Systems Research Lab (AMAS-Lab) at <a href="https://eee.sustech.edu.cn/?lang=en">the Department of Electronic and Electrical Engineering</a> of <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology (SUSTech)</a>, supervised by Prof. <a href="https://scholar.google.com/citations?user=ic9y2dIAAAAJ&hl=zh-CN&oi=ao">Zhiyun Lin</a>.
               </p>
               <p>
