--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/dongli.png">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/DONGLI2.jpg">
             </td>
           </tr>
         </table>
