--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
                     <!--
                 <p class="highlight">I am looking for a PhD position in perception-aware navigation, 3D geometry, and reconstruction. Feel free to contact me if you or anyone is hiring.</p>
                     -->
-              </body> https://people.ucas.ac.cn/~longchen
+              </body>
               <p>
                 I am currently a graduate student at Macau University of Science and Technology (MUST) and the Institute of Automation, Chinese Academy of Sciences (CASIA), supervised by <a href="https://people.ucas.ac.cn/~longchen">Prof.Long Chen</a>, working on Space Robotics.
               </p>
