--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
                     -->
               </body>
               <p>
-                I am currently a graduate student at Macau University of Science and Technology (MUST) and the Institute of Automation, Chinese Academy of Sciences (CASIA), supervised by <a href="https://people.ucas.ac.cn/~longchen">Prof.Long Chen</a>, working on Space Robotics.
+                I am currently a graduate student at Macau University of Science and Technology (MUST) and the Institute of Automation, Chinese Academy of Sciences (CASIA), supervised by <a href="https://people.ucas.ac.cn/~longchen">Prof.Long Chen</a>, working on <font color="red"><strong>Space Robotics</strong></font>.
               </p>
               <p>
               I was a Research Assistant from <a href="https://sites.google.com/view/huikonglab/home">The Intelligent Machine Research Lab (IMRL)</a> in the <a href="https://skliotsc.um.edu.mo/"> SKL-IOTSC </a> at <a href="https://www.um.edu.mo/">the University of Macau</a>, supervised by Prof. <a href="https://www.fst.um.edu.mo/people/huikong/">Hui Kong</a>. Before that, I worked as a Research Assistant for one year from June 2022 to June 2023, in the Autonomous and Multi-Agent Systems Research Lab (AMAS-Lab) at <a href="https://eee.sustech.edu.cn/?lang=en">the Department of Electronic and Electrical Engineering</a> of <a href="https://www.sustech.edu.cn/en/">Southern University of Science and Technology (SUSTech)</a>, supervised by Prof. <a href="https://scholar.google.com/citations?user=ic9y2dIAAAAJ&hl=zh-CN&oi=ao">Zhiyun Lin</a>.
