--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -193,6 +193,9 @@
               {% if post.coverletter %}
               <a href="{{post.coverletter}}">review comments and cover letter</a> /
               {% endif %}
+              {% if post.post %}
+              <a href="{{post.post}}">机器之心中文解读</a> /
+              {% endif %}
               <p></p>
               {{ post.excerpt }}
             </td>
