--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,9 +94,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                [Dec 2025]&nbsp;&nbsp; Our survey on 3D Scene Representation is available on <a href="https://arxiv.org/pdf/2512.03422">arXiv</a>, and there is also a Chinese version of the introduction that can be used for <a href="https://mp.weixin.qq.com/s/vBNr9hGz9mEH9cprGLm_GQ">机器之心</a>.
-
-.
+                [Dec 2025]&nbsp;&nbsp; Our survey on 3D Scene Representation is available on <a href="https://arxiv.org/pdf/2512.03422">arXiv</a>, and Chinese introduction available for <a href="https://mp.weixin.qq.com/s/vBNr9hGz9mEH9cprGLm_GQ">机器之心</a>.
               </p>
               <p>
               	[Oct 2025]&nbsp;&nbsp;I will travel to Hangzhou, China to attend <a href="https://www.iros25.org/">IROS 2025</a>.
